<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".OpenScreen"
    android:background="@drawable/background" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center_horizontal|center"
        android:orientation="vertical">

        <Button
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:fontFamily="monospace"
            android:id="@+id/music"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/music_off"
            android:textColor="#FFFFFF"
            android:gravity="center"
            android:textSize="20dp" />

        <Button
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:fontFamily="monospace"
            android:id="@+id/mode"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/free_dive_mode"
            android:textColor="#FFFFFF"
            android:gravity="center"
            android:textSize="20dp" />

        <Button
            style="@style/Widget.AppCompat.Button.Borderless.Colored"
            android:fontFamily="monospace"
            android:id="@+id/vibration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vibration_on"
            android:textColor="#FFFFFF"
            android:gravity="center"
            android:textSize="20dp" />
    </LinearLayout>

</RelativeLayout>

